--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
@@ -29,3 +29,31 @@ b）单击逻辑控制器，在下拉框选择“流程控制器”。
 ##### 图2-2 选择“流程控制器”
 
 c）在left和right处输入值，在operator处选择判断条件。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-3.png)
+
+##### 图2-3 在operator处选择判断条件
+
+##### 说明：operator支持判断两边的值是否等于、不等于、大于、大于等于、小于、小于等于，如果条件成立，则会执行流程控制器下的步骤。
+
+d）选择逻辑控制器，单击右侧的“+”按钮，单击接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-4.png)
+
+##### 图2-4 单击接口
+
+e）选择模块，勾选一条用例，然后单击确定。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-5.png)
+
+##### 图2-5 勾选一条用例
+
+f）单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-6.png)
+
+##### 图2-6 单击执行
+
+g）等待场景执行完成，查看报告，判断条件成立，控制器下的接口被执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-7.png)
