--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
@@ -57,3 +57,33 @@ f）单击执行。
 g）等待场景执行完成，查看报告，判断条件成立，控制器下的接口被执行。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-7.png)
+
+##### 图2-7 查看报告
+
+##### 4.6.2.1.2 循环控制器
+
+a）选择逻辑控制器，单击如果(if)控制器，下拉框选择“循环控制器”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-8.png)
+
+##### 图2-8 选择“循环控制器”
+
+b）填入循环控制次数。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-9.png)
+
+##### 图2-9 填入循环控制次数
+
+##### 说明：循环控制次数为该控制器下接口的执行次数，次数可填入常量或变量，引入变量请参见文档测试场景组件介绍/配置器/集合变量器的使用。
+
+c）查看执行报告，接口循环三次执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-10.png)
+
+##### 图2-10 查看执行报告
+
+##### 4.6.2.1.3 while循环控制器
+
+a）选择逻辑控制器，单击如果(if)控制器，下拉框选择“while循环控制器”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-11.png)
