--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
@@ -87,3 +87,19 @@ c）查看执行报告，接口循环三次执行。
 a）选择逻辑控制器，单击如果(if)控制器，下拉框选择“while循环控制器”。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-11.png)
+
+##### 图2-11 选择“while循环控制器”
+
+b）在left和right处输入值，在operator处选择判断条件，输入超时时间，单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-12.png)
+
+##### 图2-12 在left和right处输入值
+
+##### 说明：当条件成立时，会循环执行控制器下的接口，直到设置的超时时间结束。
+
+c）等待场景执行完毕，查看报告显示接口在设置的超时时间已循环执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-13.png)
+
+##### 图2-13 查看报告
