--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/1. Cookie管理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/1. Cookie管理器.md
@@ -1,1 +1,25 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.7 配置器
+
+##### 4.7.1 Cookie管理器
+
+Cookie管理器会将用户存储的Cookie添加进接口的Cookie中，并用于后续应用的其他请求，用来维持会话。本节主要介绍如何使用Cookie管理器。
+
+##### 说明：Cookie管理器可在根测试场景、场景组、接口下添加。若在根测试场景下添加，则所有的场景组内满足Cookie配置的接口都能使用该Cookie；若在子场景组下添加，则只有该子场景组内的满足Cookie配置的接口使用，其他场景组的接口不可用；若在接口下添加，则当前接口满足Cookie配置可用，否则不可用。
+
+##### 4.7.1.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，选择接口，单击右侧的“+”键，单击配置器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/image.png)
+
+##### 图1-1 单击配置器
+
+b）选择配置器，下拉框选择“cookie管理器”，单击新增cookie。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/1-2.png)
+
+##### 图1-2 单击新增cookie
+
+c）输入cookie的名称、域，选择变量类型，输入变量的值，单击确定。
