--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/1. Cookie管理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/1. Cookie管理器.md
@@ -44,3 +44,9 @@ d）单击执行来执行场景。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/1-4.png)
 
 ##### 图1-4 单击执行来执行场景
+
+e）等待场景执行完成，单击请求内容可以查看到接口已经被添加到请求内容的Cookie中。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/1-5.png)
+
+##### 图1-5 单击请求内容
