--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/2. 信息头管理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/2. 信息头管理器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.7 配置器
+
+##### 4.7.2 信息头管理器
+
+信息头管理器用于添加或覆盖HTTP请求头信息，配置好信息头管理器后，接口请求时将使用信息头管理器中的请求头。本节介绍如何使用信息头管理器。
+
+##### 说明：信息头管理器可在根测试场景、场景组、接口下添加。若在根测试场景下添加，则所有的场景组内的接口都会使用该信息头；若在子场景组下添加，则只有该子场景组内的接口能使用，其他场景组的接口不可用；若在接口下添加，则只有当前接口可用。
+
+##### 4.7.2.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，选中“根场景组”，然后单击＋号按钮 > 配置器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/2-1.png)
+
+##### 图2-1 单击配置器
+
+b）选择“信息头管理器”，单击新增header，然后填写正确的头信息。
