--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/3. 用户定义变量器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/3. 用户定义变量器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.7 配置器
+
+##### 4.7.3 用户定义变量器
+
+用户可以在用户定义变量器中自定义变量，可在测试场景中通过${变量名}引用该变量，获取该变量的值。本节主要介绍如何使用用户定义变量器。
+
+##### 4.7.3.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，选择接口，单击右侧的“+”键，单击配置器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-1.png)
+
+##### 图3-1 单击配置器
+
+b）选择配置器，下拉框选择“用户定义变量器”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-2.png)
