--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/3. 用户定义变量器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/3. 用户定义变量器.md
@@ -10,19 +10,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，选择接口，单击右侧的“+”键，单击配置器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/194693477-f115813e-791e-418d-8417-2c68b1d815db.png)
 
 ##### 图3-1 单击配置器
 
 b）选择配置器，下拉框选择“用户定义变量器”。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/194693484-ae427ebc-2d0e-40be-b2f9-75c5ebb9e548.png)
 
 ##### 图3-2 选择“用户定义变量器”
 
 c）单击新增变量，填写变量名name，选择变量类型为“常量”，输入变量值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/194693488-58802dc4-9998-400b-a0e2-384a89ef5226.png)
 
 ##### 图3-3 填写变量相关参数
 
@@ -30,19 +30,19 @@ c）单击新增变量，填写变量名name，选择变量类型为“常量”
 
 d）在接口需要引用变量的地方使用“${变量名}”来引用变量。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-4.png)
+![image](https://user-images.githubusercontent.com/79617492/194693494-4cc4c811-5f92-48f4-b8c6-f77c402757ee.png)
 
 ##### 图3-4 使用“${变量名}”来引用变量
 
 e）单击上方的执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-5.png)
+![image](https://user-images.githubusercontent.com/79617492/194693500-cc5f1194-58b5-48a0-99ff-7278067adfd0.png)
 
 ##### 图3-5 单击上方的执行
 
 f）查看执行报告，字段值获取到变量中的值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/3-6.png)
+![image](https://user-images.githubusercontent.com/79617492/194693508-9f841ff0-a992-486a-a917-6f4a43833fd0.png)
 
 ##### 图3-6 查看执行报告
 
