--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/4. 缓存管理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/4. 缓存管理器.md
@@ -1,1 +1,21 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.7 配置器
+
+##### 4.7.4 缓存管理器
+
+缓存管理器用于向其范围内的HTTP请求添加缓存功能，以模拟浏览器缓存功能。本节介绍如何使用缓存管理器。
+
+##### 说明：
+
+##### 该属性管理器用于模拟浏览器的缓存行为，测试场景运行过程中会使用Last-Modified、ETag和Expired等决定是否从缓存中获取相应的元素。
+
+##### 4.7.4.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 配置器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/4-1.png)
+
+##### 图4-1 单击＋号按钮 > 配置器
+
+b）选择缓存管理器，配置相关信息，然后单击执行。
