--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/4. 缓存管理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/4. 缓存管理器.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 配置器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/194693563-eb468643-df7f-4400-8032-534c235e9148.png)
 
 ##### 图4-1 单击＋号按钮 > 配置器
 
 b）选择缓存管理器，配置相关信息，然后单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/194693568-4ac03fcd-e892-4511-a1df-4d03e17bc307.png)
 
 ##### 图4-2 配置相关信息
 
 c）执行成功，进行执行接口请求时会清空缓存。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/194693572-8384bbbf-59aa-444c-be9b-799976ffac95.png)
 
 ##### 图4-3 执行成功
 
