--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/4. 缓存管理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/4. 缓存管理器.md
@@ -6,9 +6,7 @@
 
 缓存管理器用于向其范围内的HTTP请求添加缓存功能，以模拟浏览器缓存功能。本节介绍如何使用缓存管理器。
 
-##### 说明：
-
-##### 该属性管理器用于模拟浏览器的缓存行为，测试场景运行过程中会使用Last-Modified、ETag和Expired等决定是否从缓存中获取相应的元素。
+##### 说明：该属性管理器用于模拟浏览器的缓存行为，测试场景运行过程中会使用Last-Modified、ETag和Expired等决定是否从缓存中获取相应的元素。
 
 ##### 4.7.4.1 操作步骤
 
