--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/5. 集合变量器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/5. 集合变量器.md
@@ -1,1 +1,21 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.7 配置器
+
+##### 4.7.5 集合变量器
+
+集合变量器作为SQL管理、变量集、Excel管理的媒介，用户可以通过集合变量器获取这三种集合的数据，包含集合的所有结果、集合的长度以及集合的某一个值。
+
+本节将结合集合变量器、循环控制器获取SQL管理中的数据，来为您展示如何使用集合变量器。
+
+##### 4.7.5.1 前提条件
+
+集合变量器的使用在测试场景中进行，您需要提前创建好测试场景，关于如何创建测试场景具体可参见《SoFlu全自动测试平台教程操作指南第2.4.1.1节：新增测试场景》。
+
+##### 4.7.5.2 操作步骤
+
+a）进入全自动测试平台，单击页面上方接口测试 > SQL管理，进入SQL管理页面，新增一条SQL数据集。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/5-1.png)
+
+##### 图5-1 新增一条SQL数据集
