--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/5. 集合变量器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/7. 配置器/5. 集合变量器.md
@@ -43,3 +43,26 @@ c）选择”集合变量器”。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/5-4.png)
 
 ##### 图5-4 选择”集合变量器”
+
+d）变量类型选择”SQL管理”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/5-5.png)
+
+##### 图5-5 变量类型选择”SQL管理”。
+
+e）系统弹出SQL选择页面，选择需获取数据的SQL数据集，本节选择创建好的“查询名单信息”数据集，然后单击确定。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/5-6.png)
+
+##### 图5-6 选择数据集
+
+f）填写集合变量器的变量名，用于后续引用集合变量器所指代的SQL数据集。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/7.%20%E9%85%8D%E7%BD%AE%E5%99%A8/5-7.png)
+
+##### 图5-7 填写集合变量器的变量名
+
+```
+说明：
+
+f1）一个集合变量器仅可以引用一个SQL数据集或一个变量集或一个Excel文件，不能引用多个数据集。
