--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/1. 下载安装谷歌浏览器录制插件.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/1. 下载安装谷歌浏览器录制插件.md
@@ -1,1 +1,23 @@
-test
+### 5. 进阶指南 
+
+#### 5.1 接口录制
+
+##### 5.1.1 下载安装谷歌浏览器录制插件
+
+本节将为您具体介绍如何下载并安装谷歌浏览器录制插件。
+
+##### 说明：目前全自动测试平台仅支持谷歌浏览器中接口的录制。
+
+##### 5.1.1.1 下载谷歌浏览器录制插件
+
+a）进入全自动测试平台，单击右上角“工具下载”选项。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-1.png)
+
+##### 图1-1 单击工具下载
+
+b）系统弹出工具下载页面，单击“谷歌浏览器录制插件”，下载插件压缩包。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-2.png)
+
+##### 图1-2 工具下载页面
