--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/1. 下载安装谷歌浏览器录制插件.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/1. 下载安装谷歌浏览器录制插件.md
@@ -12,42 +12,42 @@
 
 a）进入全自动测试平台，单击右上角“工具下载”选项。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-1.png)
+![image](https://user-images.githubusercontent.com/79617492/194693979-5338c428-d2ab-4c27-9e02-45b4b551f7b1.png)
 
 ##### 图1-1 单击工具下载
 
 b）系统弹出工具下载页面，单击“谷歌浏览器录制插件”，下载插件压缩包。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/194693982-35e9e490-05d6-4b27-98b3-5e1f2058e493.png)
 
 ##### 图1-2 工具下载页面
 
 c）解压插件压缩包。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/194693986-82616448-a407-4ec4-b508-9544cabaad06.png)
 
 ##### 图1-3 解压插件压缩包
 
 d）打开谷歌浏览器，单击右上角三个点符号，然后单击更多工具 > 扩展程序。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/194693992-aa9dd417-92d2-407c-acae-523fe4354da3.png)
 
 ##### 图1-4 选择扩展程序
 
 e）进入扩展程序页面，打开开发者模式，单击加载已解压的扩展程序。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/194693998-23ab871c-29a0-42fe-9e20-a5d25f494c7a.png)
 
 ##### 图1-5 加载已解压的扩展程序
 
 f）选择刚解压的文件夹上传即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/194694005-7fdf3cfb-f4c4-4c6a-897f-d33dc455f642.png)
 
 ##### 图1-6 选择文件夹
 
 g）浏览器页面显示“扩展程序已加载完毕”且出现“全自动测试平台-Chrome浏览器插件”卡片，说明谷歌浏览器录制插件安装成功。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/1-7.png)
+![image](https://user-images.githubusercontent.com/79617492/194694007-6bd4958f-0dfa-461d-95b2-42f14caf6a46.png)
 
 ##### 图1-7 安装成功
