--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/2. 录制接口.md
@@ -1,1 +1,21 @@
-test
+### 5. 进阶指南
+
+#### 5.1 接口录制
+
+##### 5.1.2 录制接口
+
+本节将为您具体介绍如何使用谷歌浏览器录制插件进行接口的录制。通过录制接口，您可以把录制期间进行所有操作调用到的接口信息保存下来应用到全自动测试平台，对接口进行调试。
+
+##### 5.1.2.1 前提条件
+
+您需要先下载并安装好谷歌浏览器录制插件。
+
+##### 5.1.2.2 操作步骤
+
+a）进入谷歌浏览器扩展程序页面，打开全自动测试平台-Chrome浏览器插件开关，然后右上角会显示插件图标。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-1.png)
+
+##### 图2-1 打开插件开关
+
+b）单击右上角插件图标，然后单击去登录，进行登录飞算SoFlu软件机器人系统。
