--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/2. 录制接口.md
@@ -19,3 +19,24 @@ a）进入谷歌浏览器扩展程序页面，打开全自动测试平台-Chrome
 ##### 图2-1 打开插件开关
 
 b）单击右上角插件图标，然后单击去登录，进行登录飞算SoFlu软件机器人系统。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-2.png)
+
+##### 图2-2 登录飞算SoFlu软件机器人系统
+
+c）登录成功后，再单击右上角插件图标，然后单击页面下方高级选项，选择需录制接口的类型。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-3.png)
+
+##### 图2-3 选择需录制接口的类型
+
+##### 说明：插件默认的录制类型为“Http Request”和“Cookie”，若需录制其它类型，勾选所需录制类型，单击开始录制即可生效。
+
+d）单击开始录制按钮，进行接口录制。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-4.png)
+
+##### 图2-4 进行接口录制
+
+```
+说明：
