--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/2. 录制接口.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/2. 录制接口.md
@@ -40,3 +40,30 @@ d）单击开始录制按钮，进行接口录制。
 
 ```
 说明：
+
+d1）每次单击开始录制后，将会清空上一次录制的所有接口信息且无法恢复，所以需使用的接口信息应及时应用到全自动测试平台。
+
+d2）每一次录制都相当于一次测试用例，可以分开多次录制，即生成多个测试用例，上限为10个。
+```
+
+##### 全自动测试平台接口录制功能可以进行谷歌浏览器中任意平台的接口录制，接下来将以在全自动测试平台创建分组为例来展示。
+
+e）单击创建分组，输入分组名称，然后单击确定即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-5.png)
+
+##### 图2-5 创建分组
+
+f）单击右上角插件图标，您可以在录制页面看到“创建分组”操作调用了3个接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-6.png)
+
+##### 图2-6 单击右上角插件图标
+
+g）选择测试用例，您可以修改当前测试用例的名称，若需录制多个测试用例，您可以下方输入框中输入测试用例名称，单击添加即可，如图2-7所示。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/2-7.png)
+
+##### 图2-7 添加测试用例
+
+##### 说明：上一个测试用例接口数量不为0，且在录制状态时才可以添加下一个测试用例。
