--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/3. 查看及使用录制数据.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/3. 查看及使用录制数据.md
@@ -1,1 +1,25 @@
-test
+### 5. 进阶指南
+
+#### 5.1 接口录制
+
+##### 5.1.3 查看及使用录制数据
+
+本节为您介绍如何查看录制数据（包含测试用例和接口数据），以及如何在不同的环境下使用录制的接口数据。
+
+##### 5.1.3.1 前提条件
+
+您已完成一次接口录制。
+
+##### 5.1.3.2 查看测试用例
+
+进入全自动测试平台在录制接口时指定的项目和测试用例模块，您可以看到该测试用例模块下已自动创建了录制的测试用例，录制的测试用例详情内容为空，您可以自行设置。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/3-1.png)
+
+##### 图3-1 查看测试用例
+
+##### 5.1.3.3 查看测试用例下的所有接口数据
+
+a）单击平台上方“测试场景 > 测试场景管理”，选择对应的测试用例模块。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/3-2.png)
