--- a/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/3. 查看及使用录制数据.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/1. 接口录制/3. 查看及使用录制数据.md
@@ -23,3 +23,29 @@
 a）单击平台上方“测试场景 > 测试场景管理”，选择对应的测试用例模块。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/3-2.png)
+
+##### 图3-2 选择对应的测试用例模块
+
+##### 注意：
+
+##### b1）录制的接口可以修改请求路径，在测试场景下添加的接口不可以修改请求路径。
+
+##### b2）录制的接口不会在接口管理中显示。
+
+##### 5.1.3.4 使用录制的接口数据
+
+##### 为了便于将录制的接口数据应用到多个环境，录制的接口在测试场景中没有固定的协议和域名，用户可以在需执行测试场景时再选择环境配置，若当前项目中没有所需的环境配置，可进入“项目设置 > 项目管理 ”新增环境配置后再选择。
+
+a）新增环境配置
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/3-4.png)
+
+##### 图3-4 新增环境配置
+
+##### 说明：为了便于将录制的接口数据应用到多个环境，录制的接口在测试场景中没有固定的协议和域名，用户可以在需执行测试场景时再选择环境配置，若当前项目中没有所需的环境配置，可进入“环境配置”页面进行新增环境配置，可参考《SoFlu全自动测试平台教程操作指南第2.1.9节：新增环境配置》。
+
+b）选择环境配置，单击保存，然后单击执行，进行执行测试场景。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/1.%20%E6%8E%A5%E5%8F%A3%E5%BD%95%E5%88%B6/3-5.png)
+
+##### 图3-5 执行测试场景
