--- a/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
@@ -1,1 +1,21 @@
-test
+### 5. 进阶指南 
+
+#### 5.2 UI脚本录制 
+
+##### 5.2.1 使用录制工具录制UI测试脚本
+
+全自动测试平台支持用户使用录制工具Selenium IDE录制UI测试脚本，脚本录制完成后导入平台即可使用，这样的方式使得创建UI测试脚本更加方便快捷，本节为您介绍如何使用录制工具录制并使用UI脚本
+
+##### 5.2.1.1 步骤指引
+
+a）下载UI脚本录制插件
+
+b）安装UI脚本录制插件
+
+c）使用录制工具录制UI脚本
+
+d）停止录制，并保存UI脚本
+
+e）导入并查看UI脚本
+
+##### 5.2.1.2 操作步骤
