--- a/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
@@ -19,3 +19,23 @@ d）停止录制，并保存UI脚本
 e）导入并查看UI脚本
 
 ##### 5.2.1.2 操作步骤
+
+##### 5.2.1.2.1 下载UI脚本录制插件
+
+a）进入全自动测试平台，单击右上角的“工具下载”按钮进入工具下载页面。
+
+b）在工具下载页面，下载录制UI脚本插件。
+
+##### 说明：平台提供谷歌以及火狐版本的Selenium IDE录制工具，您根据实际需求下载对应的插件即可，当前使用谷歌浏览器进行演示。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/image.png)
+
+##### 图1-1 单击工具下载
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-2.png)
+
+##### 图1-2 下载录制UI脚本插件
+
+##### 5.2.1.2.2 安装UI脚本录制插件
+
+a）解压下载的录制插件，进入谷歌浏览器，单击浏览器右上角三个点按钮，选择“更多工具 > 扩展程序”。
