--- a/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
@@ -79,3 +79,23 @@ b）输入录制项目名称，单击“OK”。
 ##### 图1-9 输入录制项目名称
 
 c）指定需录制UI脚本的有效URL地址，您的录制将从该URL地址开始。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-10.png)
+
+##### 图1-10 指定需录制UI脚本的有效URL地址
+
+d）单击“START RECORDING”，程序便自动打开谷歌浏览器进入该URL地址开始录制，您在页面进行相关操作即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-11.png)
+
+##### 图1-11 进入URL地址开始录制
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-12.png)
+
+##### 图1-12 登陆飞算云智官网
+
+##### 说明：本节以登录飞算云智官网为示例，进入飞算云智官网后，输入账号和密码后，点击登录即可。
+
+##### 5.2.1.2.4 停止录制，并保存UI脚本
+
+a）当您需要停止录制时，打开录制工具，单击右上角停止录制图标即可。
