--- a/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
@@ -99,3 +99,21 @@ d）单击“START RECORDING”，程序便自动打开谷歌浏览器进入该U
 ##### 5.2.1.2.4 停止录制，并保存UI脚本
 
 a）当您需要停止录制时，打开录制工具，单击右上角停止录制图标即可。
+
+b）输入录制UI测试用例的名称，单击“OK”回到录制工具页面，单击右上角“保存”按钮将脚本保存至本地即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-13.png)
+
+##### 图1-13 单击右上角停止录制图标
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-14.png)
+
+##### 图1-14 单击“OK”回到录制工具页面
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-15.png)
+
+##### 图1-15 将脚本保存至本地
+
+##### 5.2.1.2.5 导入并查看UI脚本
+
+a）再次进入全自动测试平台“测试用例 > 用例管理”页面，选择一个测试用例模块，单击“导入用例”。
