--- a/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
+++ b/SoFlu全自动测试平台教程/5. 进阶指南/2. UI脚本录制/1. 使用录制工具录制UI测试脚本.md
@@ -117,3 +117,19 @@ b）输入录制UI测试用例的名称，单击“OK”回到录制工具页面
 ##### 5.2.1.2.5 导入并查看UI脚本
 
 a）再次进入全自动测试平台“测试用例 > 用例管理”页面，选择一个测试用例模块，单击“导入用例”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-16.png)
+
+##### 图1-16 单击“导入用例”
+
+b）在导入用例页面，选择需导入的测试用例模块，将本地保存的UI脚本上传即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-17.png)
+
+##### 图1-17 选择需导入的测试用例模块
+
+c）进入UI测试，展开对应测试用例模块，单击录制的测试用例，即可查看并使用录制的UI测试脚本。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/5.%20%E8%BF%9B%E9%98%B6%E6%8C%87%E5%8D%97/2.%20UI%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6/1-18.png)
+
+##### 图1-18 查看并使用录制的UI测试脚本
