--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
@@ -1,1 +1,21 @@
-test
+### 1. 前端调测
+
+#### 1.1 项目接口与前端在线联调
+
+本节主要介绍如何使用全自动开发平台接口与前端Web在线联调的具体操作方法。
+
+##### 1.1.1 前提条件
+
+a）您已经在全自动开发平台完成项目后端接口开发工作。
+
+b）您已经完成前端Web项目的开发。
+
+##### 1.1.2 操作步骤
+
+a）新增AccessKey管理所有SQL配置在XML文件。
+
+a1）单击在飞算云智的控制台，进入用户控制台页面，如图1-1所示：
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/image.png)
+
+##### 图1-1 选择控制台
