--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
@@ -19,3 +19,21 @@ a1）单击在飞算云智的控制台，进入用户控制台页面，如图1-1
 ![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/image.png)
 
 ##### 图1-1 选择控制台
+
+a2）单击用户（主账号）头像下方 “Accesskey管理”，进入"Accesskey管理”页面，如图1-2所示：
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-2.png)
+
+##### 图1-2 选择Accesskey管理
+
+a3）在"Accesskey管理”页面，单击“创建Accesskey”，如图1-3所示：
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-3.png)
+
+##### 图1-3 创建Accesskey
+
+a4）系统显示“创建Accesskey”页面，说明创建成功，您可以直接复制AccessKey ID和AccessKey Secret，如图1-4所示：
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-4.png)
+
+##### 图1-4 Accesskey成功
