--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
@@ -37,3 +37,21 @@ a4）系统显示“创建Accesskey”页面，说明创建成功，您可以直
 ![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-4.png)
 
 ##### 图1-4 Accesskey成功
+
+##### 说明：单击“创建AccessKey”，系统自动生成AccessKey ID和AccessKey Secret。例如：AccessKeyID为5febf3ec714cf60008476bf3；AccessKey Secret为8Qk7hJCN，AccessKey使用的有效期默认为30天，您可以创建N个AccessKey，N为后台配置。
+
+a5）在"Accesskey管理”页面，创建成功的Accesskey显示在Accesskey管理列表中，如图1-5所示：
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-5.png)
+
+##### 图1-5 管理Accesskey
+
+##### 说明：
+
+##### 启用：对选择的AccessKey数据进行启用操作。
+
+##### 禁用：对选择的AccessKey数据进行禁用操作，该操作需要进行短信验证。
+
+##### 删除：对选择的AccessKey数据进行删除操作，该操作需要进行短信验证。
+
+b）前端Web与全自动开发平台接口联调。
