--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
@@ -79,3 +79,45 @@ https://swg.feisuanyz.com/demotest/addorder/AddOrder?access_key_id=5febf3ec714cf
 ##### 通过Request请求添加headers参数方式进行联调：
 
 b1）如果您使用的是Jquery的ajax，写法可以参考如下：
+
+
+```
+let access_key_id = '5febf3ec714cf60008476bf3'
+let access_key_secret = '8Qk7hJCN'
+$.ajax(
+                {
+                    url: 'Your Url',
+                    type:'post',
+                    dateType:'json',
+                    headers:{ 
+'access_key_id ': access_key_id ',
+' access_key_secret ': access_key_secret'
+... // 您可以添加一些其他配置
+},
+                    data:JSON.stringify(org),
+                    success:function(data){console.log("sucess");},
+                    error:function(data){console.log("error");}
+                }
+            );
+```
+
+b2）如果您使用的是vue的axios，写法可以参考如下：
+
+```
+let access_key_id = '5febf3ec714cf60008476bf3'
+let access_key_secret = '8Qk7hJCN'
+
+let data = { 'bar': 123 };
+let options = {
+url: 'Your Url',
+  method: 'POST',
+  headers: {
+ 'access_key_id': access_key_id ,
+'access_key_secret': access_key_secret'
+... // 您可以添加一些其他配置
+},
+  data: data
+  
+};
+axios(options);
+```
