--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
@@ -121,3 +121,32 @@ url: 'Your Url',
 };
 axios(options);
 ```
+
+b3）如果您使用的是AngularJS的$http，写法可以参考如下：
+
+```
+let access_key_id = '5febf3ec714cf60008476bf3'
+let access_key_secret = '8Qk7hJCN'
+let data = { 'bar': 123 };
+
+$http({
+url: 'Your Url',
+method:'POST',
+data: data,
+headers: {
+ 'access_key_id': access_key_id ,
+'access_key_secret': access_key_secret'
+... // 您可以添加一些其他配置
+},   
+}).then(function(data){
+console.log(data);
+},function (err){
+console.log(err);
+})
+```
+
+##### 如果您的请求头成功添加了AccessKey Secret值，可以正常请求接口，如图1-7所示：
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-7.png)
+
+##### 图1-7 成功添加AccessKey Secret值
