--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/1. 前端调测/1. 项目接口与前端在线联调.md
@@ -16,25 +16,25 @@ a）新增AccessKey管理所有SQL配置在XML文件。
 
 a1）单击在飞算云智的控制台，进入用户控制台页面，如图1-1所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/194749156-2a84589c-1c89-4211-bfda-87669c63904d.png)
 
 ##### 图1-1 选择控制台
 
 a2）单击用户（主账号）头像下方 “Accesskey管理”，进入"Accesskey管理”页面，如图1-2所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/194749160-732e5f77-cf54-417d-b97f-6895960dd2d5.png)
 
 ##### 图1-2 选择Accesskey管理
 
 a3）在"Accesskey管理”页面，单击“创建Accesskey”，如图1-3所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/194749173-52505593-b7cf-424f-975e-4baa300ac470.png)
 
 ##### 图1-3 创建Accesskey
 
 a4）系统显示“创建Accesskey”页面，说明创建成功，您可以直接复制AccessKey ID和AccessKey Secret，如图1-4所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/194749181-b642d15c-af65-476a-ba7c-365495109b02.png)
 
 ##### 图1-4 Accesskey成功
 
@@ -42,7 +42,7 @@ a4）系统显示“创建Accesskey”页面，说明创建成功，您可以直
 
 a5）在"Accesskey管理”页面，创建成功的Accesskey显示在Accesskey管理列表中，如图1-5所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/194749186-ca3f7ff3-efc7-432d-badb-0fd34cb0dc08.png)
 
 ##### 图1-5 管理Accesskey
 
@@ -65,8 +65,7 @@ b）前端Web与全自动开发平台接口联调。
 ```
 https://swg.feisuanyz.com/+项目接口地址? (具体路径请参见：项目管理 > *具体项目* > 接口文档 > 接口地址) +access_key_id=*xxx*&access_key_secret=*xxx*
 ```
-
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/194749192-00e2aa5a-a6d3-4f9f-8a1e-5ed9fae0d4bf.png)
 
 ##### 图1-6 项目接口地址
 
@@ -147,7 +146,7 @@ console.log(err);
 
 ##### 如果您的请求头成功添加了AccessKey Secret值，可以正常请求接口，如图1-7所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/1.%20%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/1-7.png)
+![image](https://user-images.githubusercontent.com/79617492/194749201-3b872674-5cac-4458-baf8-5d0f69d092d3.png)
 
 ##### 图1-7 成功添加AccessKey Secret值
 
