--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/0. 什么是(后端)全自动开发平台.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/0. 什么是(后端)全自动开发平台.md
@@ -17,3 +17,25 @@ b）丰富的组件库
 c）可视化执行日志
 
 提供接口级的单元测试能力，通过在可视化日志里查看整个接口的执行过程和中间节点数据，极大地提高了测试效率。
+
+d）仿真测试
+
+定义接口参数值并运行，可视化执行结果，快速定位问题，告别Debug逐行调试定位问题。系统提供丰富的组件库，集成1000余个插件。
+
+#### 0.2 产品特点
+
+平台使用超轻松便利、上手零负担、助力企业高效率、低成本开发应用软件。
+
+##### 0.3 平台全景图
+
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/0.%20%E4%BB%80%E4%B9%88%E6%98%AF(%E5%90%8E%E7%AB%AF)%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/image.png)
+
+##### 图0-1 平台全景图
+
+##### 0.4 平台首页分区介绍
+
+a）平台菜单区：主要包括项目管理、配置中心、系统配置、组件列表、扩展JAR包、数据库配置、插件中心、函数库中心、调用链图、导入导出记录、管理配置等菜单选项。
+
+b）平台管理区：主要包括创建项目、导入项目、创建项目分组、查询项目、选择当前项目组、平台日志报表、平台应用服务器。
+
+c）平台项目开发区：以卡片形式展示在平台创建的开发项目的集合。
