--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/1. 注册账户/2. 注册使用社区版.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/1. 注册账户/2. 注册使用社区版.md
@@ -1,1 +1,17 @@
-test
+### 2. 快速入门
+
+#### 2.1 注册账户
+
+#### 2.1.2 注册使用社区版
+
+全自动开发平台社区版可供非企业或开源开发者们免费访问，其功能有一定的限制，具体可点击[平台版本](https://feisuanyz.com/platformVersion/?productCategoryId=5f8deeb2dc018d0008854ace&id=flowv)查看。
+
+本节为您介绍注册使用社区版的完整过程。
+
+#### 说明：
+
+#### 目前仅(后端)全自动开发平台区分商用版和社区版，注册使用社区版不需要实名认证，但社区版账号与商用版账号不可共用；若您想要使用(后端)全自动开发平台的全部功能或SoFlu软件机器人其他平台，如全自动测试平台、(前端)全自动开发平台等，则需要在注册商用版后使用商用版账号登录进入平台，具体操作请参见《SoFlu（后端）全自动开发平台教程第2.1.1节：注册使用商用版》。
+
+##### 2.1.2.1 前提条件
+
+a）您已获取社区版本地客户端：
