--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/1. 注册账户/2. 注册使用社区版.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/1. 注册账户/2. 注册使用社区版.md
@@ -15,3 +15,25 @@
 ##### 2.1.2.1 前提条件
 
 a）您已获取社区版本地客户端：
+
+a1）进入飞算云智GitHub/Gitee社区官方网站，即可在README.md文档中查看到社区版本地客户端下载入口。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/1.%20%E6%B3%A8%E5%86%8C%E8%B4%A6%E6%88%B7/image.png)
+
+##### 图2-1 查看社区版本地客户端下载入口
+
+或 a2）在 https://gitee.com/feisuanyz/SoFlu-adp/blob/master/App.md 下载
+
+b）您已成功启动社区版本地客户端，启动方式见《SoFlu（后端）全自动开发平台教程第2.10.2节：启动本地客户端》。
+
+##### 2.1.2.2 操作步骤
+
+a）启动社区版本地客户端成功后，在浏览器地址栏输入 http://服务器地址:服务端口 即可进入平台社区版登录页面。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/1.%20%E6%B3%A8%E5%86%8C%E8%B4%A6%E6%88%B7/2-2.png)
+
+##### 图2-2 社区版登录页面
+
+##### 说明：“服务器地址”为当前部署本地客户端的服务器IP地址，可以填写localhost；“端口号”默认为8080，若您想要使用其他端口号，通过配置文件修改配置信息即可，具体操作请参见《SoFlu（后端）全自动开发平台教程第2.10.2节：启动本地客户端》。
+
+b）单击“免费注册”进入社区版会员注册页面，填写好注册信息，阅读并勾选相关条款后，单击“同意条款并注册”。
