--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/2. 创建项目/1. 如何创建项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/2. 创建项目/1. 如何创建项目.md
@@ -16,19 +16,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入(后端)全自动开发平台，系统默认显示项目管理页面，在该页面单击创建项目。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/image.png)
+![image](https://user-images.githubusercontent.com/79617492/194819012-4a114f76-2f15-42d3-95b2-87e517a7e885.png)
 
 ##### 图1-1 项目管理页面
 
 b）输入项目名称、项目路径等基本信息后，单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/194819023-f316fe98-0cfd-4ecb-b3a8-1ba4ba97a308.png)
 
 ##### 图1-2 输入相关信息
 
 c）系统提示“新增成功”并弹出项目加载项页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/194819029-cb93696e-b331-4fc7-8b6d-dfbaf8f8ff7f.png)
 
 ##### 图1-3 项目加载项页面
 
@@ -36,13 +36,13 @@ c）系统提示“新增成功”并弹出项目加载项页面。
 
 d）请根据实际开发需求添加加载项，添加完成后单击加载应用即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/194819045-0fa6525c-a0b6-428d-a321-38e6d1396d70.png)
 
 ##### 图1-4 添加加载项
 
 e）项目创建成功，新增的项目会显示在项目管理页面上，您可以开始后续的项目开发工作啦！
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/194819053-1beb2708-2fec-4d34-9283-51c3bf0c8084.png)
 
 ##### 图1-5 项目创建成功
 
