--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/2. 创建项目/2. 如何加载资源.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/2. 创建项目/2. 如何加载资源.md
@@ -1,1 +1,15 @@
-test
+### 2. 快速入门
+
+#### 2.2 创建项目
+
+#### 2.2.2 如何加载资源
+
+本节为您介绍如何在项目中加载所需资源。
+
+##### 2.2.2.1 操作步骤
+
+a）在项目管理页面，选择已创建项目，单击项目设置按钮，选择加载项选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/2-1.png)
+
+##### 图2-1 选择加载项选项
