--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/3. 连接数据库/1. 如何连接数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/3. 连接数据库/1. 如何连接数据库.md
@@ -1,1 +1,19 @@
-test
+### 2. 快速入门
+
+#### 2.3 连接数据库
+
+#### 2.3.1 如何连接数据库
+
+(后端)全自动开发平台支持连接数据库，连接到数据库后，接口可在流程编辑器中使用SQL组件进行数据库操作。
+
+接口在流程编辑器中使用SQL组件进行数据库操作需要先创建分布式或嵌入式中间件资源实例，本节使用嵌入式中间件资源实例为您介绍如何连接数据库。
+
+```
+说明：
+ 
+a）(后端)全自动开发平台官方系统仅支持连接公网的数据库，若需访问内网数据库，请使用本地客户端进行项目开发，如何使用本地客户端请参考《SoFlu（后端）全自动开发平台教程第2.10章：本地客户端》。
+ 
+b）分布式或嵌入式中间件资源实例用于数据库访问，便于对数据库进行增删改查等操作。
+```
+
+##### 2.3.1.1 步骤引导
