--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/4. 创建资源实例/1. 如何新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/4. 创建资源实例/1. 如何新增资源实例.md
@@ -1,1 +1,23 @@
-test
+### 2. 快速入门 
+
+#### 2.4 创建资源实例
+
+#### 2.4.1 如何新增资源实例
+
+本节主要介绍在项目中新增资源实例的具体操作方法。
+
+##### 2.4.1.1 前提条件
+
+在新增资源实例之前，您需要先加载对应的资源，关于如何加载资源请参见《SoFlu（后端）全自动开发平台教程第2.2.2节：如何加载资源》。
+
+##### 2.4.1.2 操作步骤
+
+a）进入项目功能模块界面，选择资源实例功能模块。
+
+b）选中已加载的资源，单击 + 按钮，选择新增资源实例。
+
+c）系统显示新增资源实例页面，您需要填写资源实例的基本信息（名称、描述），同时填写资源实例的配置项信息，最后单击提交即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/4.%20%E5%88%9B%E5%BB%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+
+##### 图1-1 填写相关信息
