--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/4. 创建资源实例/1. 如何新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/4. 创建资源实例/1. 如何新增资源实例.md
@@ -18,6 +18,6 @@ b）选中已加载的资源，单击 + 按钮，选择新增资源实例。
 
 c）系统显示新增资源实例页面，您需要填写资源实例的基本信息（名称、描述），同时填写资源实例的配置项信息，最后单击提交即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/4.%20%E5%88%9B%E5%BB%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/194819933-f168d8da-1fa4-4493-9cb9-721274f0a9f6.png)
 
 ##### 图1-1 填写相关信息
