--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/5. 新增SQL/1. 如何新增SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/5. 新增SQL/1. 如何新增SQL信息.md
@@ -1,1 +1,23 @@
-test
+### 2. 快速入门
+
+#### 2.5 新增SQL
+
+#### 2.5.1 如何新增SQL信息
+
+本节为您介绍如何在项目中新增SQL信息。
+
+#### 说明：(后端)全自动开发平台提供SQL管理功能模块，用户可通过新增SQL组、新增SQL模块对SQL信息进行分类管理。
+
+#### 2.5.1.1 前提条件
+
+您已创建分布式中间件、嵌入式中间件或数据库中间件的资源实例，三者任选其一即可，具体操作可参见《SoFlu（后端）全自动开发平台教程南第4.15章：资源实例》部分。
+
+#### 2.5.1.2 步骤引导
+
+a）新增SQL组
+
+b）新增SQL模块
+
+c）新增SQL信息
+
+#### 2.5.1.3.1 新增SQL组
