--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/5. 新增SQL/2. 如何自动生成SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/5. 新增SQL/2. 如何自动生成SQL信息.md
@@ -1,1 +1,19 @@
-test
+### 2. 快速入门
+
+#### 2.5 新增SQL
+
+#### 2.5.2 如何自动生成SQL信息
+
+本节为您介绍如何自动生成SQL信息。
+
+#### 说明：(后端)全自动开发平台提供接口生成器功能模块，通过接口生成器，用户不仅可以自动生成SQL信息，还可以自动生成接口和实体模型。
+
+#### 2.5.2.1 操作步骤
+
+a）进入(后端)全自动开发平台项目管理页面，选择指定的项目卡片。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/5.%20%E6%96%B0%E5%A2%9ESQL/2-1.png)
+
+##### 图2-1 选择指定的项目卡片
+
+b）进入项目功能模块界面，选择接口生成器功能模块，系统显示接口生成器页面，开始进行自动生成SQL信息操作。
