--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/5. 新增SQL/2. 如何自动生成SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/5. 新增SQL/2. 如何自动生成SQL信息.md
@@ -39,3 +39,21 @@ e）生成SQL信息： 勾选需自动生成SQL信息的SQL语句类型。
 ![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/5.%20%E6%96%B0%E5%A2%9ESQL/2-4.png)
 
 ##### 图2-4 勾选SQL语句类型
+
+f）生成SQL信息： 选择生成SQL信息需放置的SQL组。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/5.%20%E6%96%B0%E5%A2%9ESQL/2-5.png)
+
+##### 图2-5 选择SQL组
+
+##### 说明：若此处没有可用的SQL组，单击添加SQL组跳转至SQL管理页面创建即可；若创建SQL组后，此处仍未显示已创建的SQL组，您需要单击右侧刷新按钮刷新一下SQL组列表。
+
+g）生成SQL信息： 选择生成SQL信息放置的SQL模块。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/5.%20%E6%96%B0%E5%A2%9ESQL/2-6.png)
+
+##### 图2-6 选择SQL模块
+
+##### 说明：同样若此处没有可用的SQL模块，您需要创建后刷新列表。
+
+h）所有信息选择完成后，单击右上角生成接口即可，系统提示“操作成功”。
