--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/6. 创建接口/1. 如何创建接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/6. 创建接口/1. 如何创建接口.md
@@ -1,1 +1,29 @@
-test
+### 2. 快速入门
+
+#### 2.6 创建接口
+
+#### 2.6.1 如何创建接口
+
+本节为您介绍如何在项目中创建接口。
+
+#### 说明：接口是进行功能实现的关键，用户可以根据自身需求创建并设计接口，来实现特定功能。
+
+#### 2.6.1.1 步骤引导
+
+a）创建接口-填写接口基本信息
+
+b）创建接口-配置接口的入口参数
+
+c）创建接口-接口模型编辑
+
+d）提交并发布接口
+
+#### 2.6.1.1.1 创建接口-填写接口基本信息
+
+a）进入接口管理功能模块，单击已创建接口模块后的 + 按钮，选择新增接口。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/6.%20%E5%88%9B%E5%BB%BA%E6%8E%A5%E5%8F%A3/image.png)
+
+##### 图1-1 新增接口
+
+b）系统显示新增接口信息页面，填写接口的基本信息后，单击下一步。
