--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/6. 创建接口/2. 如何自动生成接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/6. 创建接口/2. 如何自动生成接口.md
@@ -1,1 +1,23 @@
-test
+### 2. 快速入门
+
+#### 2.6 创建接口
+
+#### 2.6.2 如何自动生成接口
+
+用户可以通过接口生成器自动生成指定表单对应的接口信息，本节为您介绍如何自动生成接口。
+
+#### 2.6.1.1 前提条件
+
+a）您已创建接口模块、SQL组、SQL模块。
+
+b）创建的接口模块、SQL组、SQL模块用于放置自动生成的接口和SQL信息。
+
+c）由于自动生成接口需与自动生成SQL信息同时进行，故需同时创建好接口模块、SQL组和SQL模块。
+
+#### 2.6.1.2 步骤引导
+
+a）配置连接
+
+b）选择数据
+
+c）选择接口模块
