--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/6. 创建接口/2. 如何自动生成接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/6. 创建接口/2. 如何自动生成接口.md
@@ -21,3 +21,31 @@ a）配置连接
 b）选择数据
 
 c）选择接口模块
+
+d）查看接口数据
+
+#### 2.6.1.2.1 配置连接
+
+a）进入平台功能模块界面，选择接口生成器功能模块，进入接口生成器页面，选择数据库连接后，单击下一步。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/6.%20%E5%88%9B%E5%BB%BA%E6%8E%A5%E5%8F%A3/2-1.png)
+
+##### 图2-1 进入接口生成器页面
+
+##### 说明：若连接列表中没有数据，您需要单击绿色字体进行添加数据库连接操作。
+
+#### 2.6.1.2.2 选择数据
+
+a）进入选择数据页面，选择需生成接口信息的表单，可以多选，选择完成后单击下一步。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/6.%20%E5%88%9B%E5%BB%BA%E6%8E%A5%E5%8F%A3/2-2.png)
+
+##### 图2-2 选择需生成接口信息的表单
+
+#### 2.6.1.2.3 选择接口模块
+
+a）进入生成接口页面，勾选表单自动生成的接口类型，选择接口放置的接口模块，选择完成后单击生成接口即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/6.%20%E5%88%9B%E5%BB%BA%E6%8E%A5%E5%8F%A3/2-3.png)
+
+##### 图2-3 选择接口模块
