--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/7. 测试接口/1. 如何测试接口.md
@@ -1,1 +1,23 @@
-test
+### 2. 快速入门
+
+#### 2.7 测试接口
+
+#### 2.7.1 如何测试接口
+
+通过对开发完成的接口进行测试用例操作，您可以检验接口是否可以实现预期功能或根据执行结果对接口设计进行适当调整，本节为您介绍如何测试接口。
+
+#### 2.7.1.1 前提条件
+
+您已完成创建接口操作，具体可参见《SoFlu（后端）全自动开发平台教程第2.6.1节：如何创建接口》。
+
+请确保您创建的接口已发布。
+
+#### 2.7.1.2 步骤引导
+
+a）进入接口测试用例列表页面
+
+b）选择测试用例
+
+c）编辑、执行测试用例
+
+d）查看接口测试用例结果
