--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/7. 测试接口/1. 如何测试接口.md
@@ -21,3 +21,23 @@ b）选择测试用例
 c）编辑、执行测试用例
 
 d）查看接口测试用例结果
+
+#### 2.7.1.2.1 进入接口测试用例列表页面
+
+a）进入平台功能模块界面，系统默认显示接口管理功能模块，在接口管理页面中找到您需要测试的接口，您可以通过以下两种方式进入接口测试用例列表页面：
+
+a1）选中接口，单击接口右侧的三个点按钮，选择测试用例选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7.%20%E6%B5%8B%E8%AF%95%E6%8E%A5%E5%8F%A3/image.png)
+
+##### 图1-1 方式1
+
+a2）双击接口，进入接口模型页面，单击提交选项右侧的三个点按钮，选择测试用例选项。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7.%20%E6%B5%8B%E8%AF%95%E6%8E%A5%E5%8F%A3/1-2.png)
+
+##### 图1-2 方式2
+
+#### 2.7.1.2.2 选择测试用例
+
+a）进入接口测试用例列表页面，系统默认创建了一条测试用例，您可以根据实际需求新增测试用例，然后选择您需要执行的测试用例，可多选。
