--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/7. 测试接口/1. 如何测试接口.md
@@ -41,3 +41,23 @@ a2）双击接口，进入接口模型页面，单击提交选项右侧的三个
 #### 2.7.1.2.2 选择测试用例
 
 a）进入接口测试用例列表页面，系统默认创建了一条测试用例，您可以根据实际需求新增测试用例，然后选择您需要执行的测试用例，可多选。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7.%20%E6%B5%8B%E8%AF%95%E6%8E%A5%E5%8F%A3/1-3.png)
+
+##### 图1-3 选择测试用例
+
+##### 说明：若您不需要对测试用例进行编辑、录入接口参数等操作，则可以直接单击执行选项，执行测试用例并查看测试用例结果，若需要，请进入下一步。
+
+#### 2.7.1.2.3 编辑、执行测试用例
+
+a）在测试用例列表页面，勾选您需要编辑的测试用例，单击编辑选项，即可进入测试用例编辑页面，在该页面您可以录入接口执行需要的参数，并新增接口预期结果，测试用例编辑完成后单击执行即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/7.%20%E6%B5%8B%E8%AF%95%E6%8E%A5%E5%8F%A3/1-4.png)
+
+##### 图1-4 编辑并执行测试用例
+
+##### 注意：不可以同时勾选多条测试用例进行编辑，若需编辑多条测试用例，请分别勾选后再编辑。
+
+#### 2.7.1.2.3 查看接口测试用例结果
+
+a）系统弹出测试用例执行结果详情页面，您可以查看接口的响应内容和流程执行轨迹，以下为您展示接口的响应内容详情。
