--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/8. 项目发版/1. 如何进行项目发版.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/8. 项目发版/1. 如何进行项目发版.md
@@ -10,31 +10,31 @@
 
 a）在平台项目管理页面，选择需要发版的项目，单击设置按钮，选择发版。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/8.%20%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88/image.png)
+![image](https://user-images.githubusercontent.com/79617492/195051193-5c22eec0-798a-4040-a2fa-3445285c3631.png)
 
 ##### 图1-1 选择发版
 
 b）系统弹出项目发版页面，输入项目版本的标签和描述，单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/8.%20%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/195051216-6a31495d-2014-43fe-9153-41264ed622be.png)
 
 ##### 图1-2 输入项目版本的标签和描述
 
 c）系统提示“正在生成项目数据包，请于2分钟后查看最新发版记录！”
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/8.%20%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/195051238-2fce8c1c-cc4d-4daf-90a6-3633e22fbcec.png)
 
 ##### 图1-3 系统提示
 
 d）稍等几分钟后，发版成功，再次单击设置按钮，选择发版记录。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/8.%20%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/195051250-db544ab0-c94a-4e3e-b2be-ed37eac7b0ce.png)
 
 ##### 图1-4 选择发版记录
 
 e）进入发版记录页面，在该页面您可以查看到当前项目所有发版成功的记录。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/8.%20%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/195051278-1f3da7da-bb47-44e6-ac05-7f62873047dc.png)
 
 ##### 图1-5 查看当前项目所有发版成功的记录
 
