--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
@@ -1,1 +1,21 @@
-test
+### 2. 快速入门
+
+#### 2.9 项目部署
+
+#### 2.9.1 如何进行项目发版
+
+通过部署项目，用户可以将开发完成的项目部署到服务器长期运行，本节主要针对平台端项目部署进行说明，本地端部署项目操作请您参见《SoFlu（后端）全自动开发平台教程第2.10.4节：使用本地客户端部署项目》。
+
+#### 2.9.1.1 前提条件
+
+a）您已安装1.8.0.91或以上版本JDK环境，否则将无法正常启动项目；若启动闪退，请检查JDK版本。
+
+b）您已完成项目发版操作，具体操作请参见《SoFlu（后端）全自动开发平台教程第2.8.1节：如何进行项目发版》。
+
+#### 2.9.1.2 步骤引导
+
+a）下载项目部署包
+
+b）下载执行引擎包
+
+c）启动项目
