--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
@@ -19,3 +19,23 @@ a）下载项目部署包
 b）下载执行引擎包
 
 c）启动项目
+
+#### 2.9.1.2.1 下载项目部署包
+
+a）进入平台项目管理页面，选择需部署的项目，单击设置按钮，选择发版记录。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/image.png)
+
+##### 图1-1 选择发版记录
+
+b）进入发版记录页面，找到需要部署的项目版本，下载项目部署包。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/1-2.png)
+
+##### 图1-2 下载项目部署包
+
+##### 说明：若您想要直接下载最新项目部署包进行项目部署，单击设置按钮后，选择项目部署包即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/1-3.png)
+
+##### 图1-3 下载最新项目部署包
