--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
@@ -83,3 +83,36 @@ b）将下载的项目部署包移动至执行引擎包的apps目录下。
 
 b1）若解压后的执行引擎包没有apps目录，手动创建apps目录即可。
 
+b2）项目部署默认不需要配置任何内容，启动端口默认为8080，日志文件默认存放在当前执行引擎包目录下的logs目录中（该目录在项目服务启动后自动生成）。
+
+例如：若解压后的执行引擎包为feisuanyz-engine-3.0.12，则日志生成路径是 feisuanyz-engine-3.0.12/logs ，若需修改配置，您需要创建一个application.yml文件，该文件需要和feisuanyz-engine.jar文件存放于同一目录。
+```
+
+application.yml文件创建模板如下：
+
+```
+server:
+    # 服务端口
+    port: 8080
+
+# 系统日志配置（日志二选一）
+logging:
+    file:
+        path: /logs
+
+
+# 系统日志存储到kafka（日志二选一）
+logging:
+    config: classpath:logback-kafka.xml
+
+# kafka相关配置，日志默认是保存到本地文件中，我们也支持将日志存储到kafka，需要按照下面模板进行配置
+fs:
+    kafka:
+        producer-enabled: true
+        producers:
+            logback:
+            # kafka集群地址
+                bootstrapservers: bootstrap.servers=127.0.0.1:9092,127.0.0.2:9093,127.0.0.3:9092
+                # topic
+        topic: flow-system-logs
+```
