--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
@@ -116,3 +116,30 @@ fs:
                 # topic
         topic: flow-system-logs
 ```
+
+##### 注意：` application.yml `的日志存储方式只能选择一种。
+
+c）（可选）若在Windows操作系统下部署项目，则直接双击startup.bat即可启动项目服务。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/1-9.png)
+
+##### 图1-9 启动项目服务
+
+##### 注意：默认服务端口是8080，日志存放路径是当前部署项目根目录，例如：\feisuanyz-engine-3.0.12\logs。
+
+d）（可选）若在Linux操作系统下部署项目，则执行以下操作：
+
+d1）使用工具或通过二进制方式上传项目部署包至安装的服务器，进入当前项目的安装路径下。
+
+d2）执行以下命令给安装脚本添加执行权限：
+
+```
+chmod a+x startup.sh
+chmod a+x shutdown.sh
+```
+
+d3）执行./startup.sh启动项目服务。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/1-10.png)
+
+##### 图1-10 执行./startup.sh启动项目服务
