--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
@@ -143,3 +143,18 @@ d3）执行./startup.sh启动项目服务。
 ![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/1-10.png)
 
 ##### 图1-10 执行./startup.sh启动项目服务
+
+
+```
+注意：
+
+d3-1）startup.sh为启动服务脚本；shutdown.sh为停止服务脚本。
+
+d3-2）默认服务端口号是8080，日志存放路径为当前部署项目根目录，例如：/feisuanyz-engine-3.0.12/logs。
+```
+
+e）若出现如下图所示信息，则说明项目部署成功。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/1-11.png)
+
+##### 图1-11 项目部署成功
