--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/1. 如何部署项目.md
@@ -155,6 +155,6 @@ d3-2）默认服务端口号是8080，日志存放路径为当前部署项目根
 
 e）若出现如下图所示信息，则说明项目部署成功。
 
-![Uploading image.png…]()
+![image](https://user-images.githubusercontent.com/79617492/195053992-eb533400-cf17-4ba9-8fb0-079e7caa8b96.png)
 
 ##### 图1-11 项目部署成功
