--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/2. 如何动态部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/2. 如何动态部署项目.md
@@ -1,1 +1,19 @@
-test
+### 2. 快速入门
+
+#### 2.9 项目部署
+
+#### 2.9.2 如何动态部署项目
+
+动态部署项目适用于已完成一次手动部署项目、执行引擎处于启动状态的情况，这时若需要继续部署新的项目，直接将新的项目部署包放入执行引擎包apps文件夹中即可，无需重新启动执行引擎。程序会每隔30s自动检测执行引擎包app文件夹中是否有新的新项目部署包，若有，便会自动部署该新项目。
+
+#### 2.9.2.1 前提条件
+
+执行引擎处于启动状态。
+
+#### 2.9.2.2 操作步骤
+
+a）将新项目的项目部署包放入执行引擎包中的app文件下。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/2-1.png)
+
+##### 图2-1 放置项目部署包
