--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/2. 如何动态部署项目.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/9. 项目部署/2. 如何动态部署项目.md
@@ -14,18 +14,18 @@
 
 a）将新项目的项目部署包放入执行引擎包中的app文件下。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/195054548-7264cabc-05f0-4e30-bb1a-7bf396387214.png)
 
 ##### 图2-1 放置项目部署包
 
 b）观察执行引擎程序，显示“检测到新的部署包”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/195054607-59ffecba-3449-40e4-b9f9-e67702d8ade6.png)
 
 ##### 图2-2 执行引擎程序显示“检测到新的部署包”
 
 c）新项目部署完成。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/9.%20%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/195054653-1efa91cd-699d-4d66-8a0d-6e2b82adc9aa.png)
 
 ##### 图2-3 新项目部署完成
