--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/10. 本地客户端/1. 下载商用版本地客户端.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/10. 本地客户端/1. 下载商用版本地客户端.md
@@ -1,1 +1,21 @@
-test
+### 2. 快速入门
+
+#### 2.10 本地客户端
+
+#### 2.10.1 下载商用版本地客户端
+
+本节为您介绍如何下载商用版本地客户端。
+
+#### 2.10.1.1 操作步骤
+
+a）使用商用版账号登录飞算云智官网，单击右上角“控制台”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/image.png)
+
+##### 图1-1 单击右上角“控制台”
+
+b）进入控制台页面，选择“开发产品 > (后端)全自动开发平台 > 进入平台”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/1-2.png)
+
+##### 图1-2 进入平台
