--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/10. 本地客户端/2. 启动本地客户端.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/10. 本地客户端/2. 启动本地客户端.md
@@ -16,11 +16,11 @@
 
 a）解压本地客户端后双击startup.bat，命令行窗口出现“flow-core启动完毕!”信息便说明本地客户端已成功启动。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/195281716-67bd2b9b-e449-480e-85e8-d948c2d51801.png)
 
 ##### 图2-1 双击startup.bat
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/195281741-a05ce3f9-0850-4c02-bc7c-01ed2e7324a3.png)
 
 ##### 图2-2 本地客户端已成功启动
 
@@ -61,10 +61,10 @@ fs:
 
 a）将本地客户端上传至目标服务器并解压、添加执行脚本执行权限，执行startup.sh命令，同样若出现“flow-core启动完毕!”信息即说明本地客户端启动成功。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/195281786-58c8c34f-b2ae-418a-aa43-59629360dc93.png)
 
 ##### 图2-3 执行startup.sh命令
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/2-4.png)
+![image](https://user-images.githubusercontent.com/79617492/195281820-509babd5-4055-447e-972f-02cde415a347.png)
 
 ##### 图2-4 出现“flow-core启动完毕!”
