--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/0. 概述.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/0. 概述.md
@@ -1,1 +1,25 @@
-test
+### 3. 控制台使用指引
+
+#### 3.0 概述
+
+控制台使用指引主要用于引导SoFlu软件机器人新手用户从注册一个飞算云智账号到开始使用SoFlu软件机器人的整体流程，并介绍了如何创建子账号、进行续费管理等飞算云智控制台相关的常用功能操作。
+
+#### 3.0.1 使用流程
+
+a）注册飞算云智账号
+
+在使用SoFlu软件机器人之前，您需要先注册一个飞算云智账号，具体操作流程见《SoFlu（后端）全自动开发平台教程第3.1.1节：注册飞算云智账号》。
+
+b）实名认证（个人/企业）
+
+为了保护您的飞算云智账号安全，您需要完成实名认证，可以选择个人实名认证或者企业实名认证，具体操作流程见《SoFlu（后端）全自动开发平台教程第3.1.2节：实名认证》。
+
+c）申请试用
+
+为了确保SoFlu软件机器人满足您的购买需求，建议您先申请试用再购买产品；您无需等待实名认证审核通过，便可进行申请试用操作，具体操作流程见《SoFlu（后端）全自动开发平台教程第3.1.3节：申请试用》。
+
+d）购买产品
+
+当您确定需要购买SoFlu软件机器人，可拨打电话400-8322321或在线咨询客服，待客服人员将您加入购买白名单，您便可以进入购买界面完成后续购买操作，具体操作流程见《SoFlu（后端）全自动开发平台教程第3.1.4节：购买产品》。
+
+e）为用户赋予使用权
