--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/1. 注册飞算云智账号.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/1. 注册飞算云智账号.md
@@ -1,1 +1,21 @@
-test
+### 3. 控制台使用指引
+
+#### 3.1 注册使用SoFlu软件机器人
+
+#### 3.1.1 注册飞算云智账号
+
+在使用SoFlu软件机器人之前，您需要先注册一个飞算云智账号，账号注册成功后，您便可以进行实名认证等后续操作。
+
+#### 3.1.1.1 操作步骤
+
+a）访问[飞算云智账号注册页面](https://www.feisuanyz.com/registry/)。
+
+b）根据页面提示完成注册。
+
+#### 3.1.1.2 预期结果
+
+a）飞算云智官网首页右上角出现控制台图标。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/1.%20%E6%B3%A8%E5%86%8C%E4%BD%BF%E7%94%A8SoFlu%E8%BD%AF%E4%BB%B6%E6%9C%BA%E5%99%A8%E4%BA%BA/image.png)
+
+##### 图1-1 控制台图标
