--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/3. 申请试用.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/3. 申请试用.md
@@ -1,1 +1,17 @@
-test
+### 3. 控制台使用指引
+
+#### 3.1 注册使用SoFlu软件机器人
+
+#### 3.1.3 申请试用
+
+为了确保SoFlu软件机器人满足您的购买需求，建议您先申请试用再购买产品；您无需等待实名认证审核通过，便可进行申请试用操作。
+
+##### 3.1.3.1 前提条件
+
+您已进行实名认证操作。
+
+##### 3.1.3.2 操作步骤
+
+a）您可以在实名认证操作完成后，进入[官网首页](https://www.feisuanyz.com/)，单击右上角“申请试用”。
+
+b）进入申请试用问卷表单页面，将所有信息填写完成后，单击“提交”即可。
