--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/1. 创建并授权用户组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/1. 创建并授权用户组.md
@@ -1,1 +1,15 @@
-test
+### 3. 控制台使用指引
+
+#### 3.2 子账号管理
+
+#### 3.2.1 创建并授权用户组
+
+通过用户组对职责相同的子账号用户进行分类并授权，可以更加高效地管理子账号用户及其权限。
+
+对一个用户组进行授权后，用户组内的所有子账号用户会自动继承该用户组的权限；如果一个子账号用户被加入到多个用户组，那么该子账号用户将会继承多个用户组的权限。
+
+#### 3.2.1.1 前提条件
+
+您拥有主账号用户登录权限，且该主账号已完成账号实名认证。
+
+#### 3.2.1.2 操作步骤
