--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/1. 创建并授权用户组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/2. 子账号管理/1. 创建并授权用户组.md
@@ -13,3 +13,17 @@
 您拥有主账号用户登录权限，且该主账号已完成账号实名认证。
 
 #### 3.2.1.2 操作步骤
+
+a）使用主账号登录进入飞算云智控制台，选择“子账号管理”功能进入子账号管理总览页面，或者直接进入[子账号管理总览页面](https://user.feisuanyz.com/accessControl/overview)。
+
+b）在子账号管理总览页面，单击“创建用户组”。
+
+c）系统弹出创建用户组页面，您需要填写用户组名称及用户组的显示名称，填写完成后单击“提交”即创建用户组成功。
+
+d）在子账号管理左侧导航栏，单击“人员管理 > 用户组”进入[用户组管理页面](https://user.feisuanyz.com/accountManage/roleManagement)。
+
+e）选择刚创建的用户组，单击操作列“+权限”选项，进入添加权限页面。
+
+f）勾选需授权的权限，选择完成后，单击“提交”即可。
+
+##### 说明：若您后续需对用户组的基本信息、组成员以及权限进行编辑，可单击用户组名称，进入用户组详情页面编辑，如下图所示。
